--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,8 @@
     "files.exclude": {
         ".vscode": true,
         "node_modules": true,
-        "package.json": true,
-        "package-lock.json": true,
+        "package.json": false,
+        "package-lock.json": false,
         "public": true,
     },
     
